# ElevatorGame

./: .gitignore  CMakeLists.txt  README  main.cpp  test.cpp
include/: Building.h  Elevator.h  Floor.h  GameInfo.h  NoCopyable.h  Person.h
